--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="social-icons">
-                        <li><a href="mailto:samad1082280@gmail.com?subject=Query%20about%20the%20project&body=Hello%20there!%20I%20am%20here%20to%20talk%20about%20the%20Project"  style="color:white; font-size: 15px;"><i class="fa fa-envelope"></i> Click Here</a></li>
-                        <li><a href="https://www.linkedin.com/in/as-abdul-samad/"  style="color:white; font-size: 15px;"><i class="fa fa-linkedin-square"></i> Click Here</a></li> 
-                        <li><a href="https://api.whatsapp.com/send?phone=+923131082280&text=Hello there! I am here to talk about the Project"  style="color:white; font-size: 15px;"><i class="fa fa-phone-square"></i> Click Here</a></li>
+                        <li><a href="mailto:samad1082280@gmail.com?subject=Query%20about%20the%20project&body=Hello%20there!%20I%20am%20here%20to%20talk%20about%20the%20Project"  style="color:white; font-size: 15px;"><i class="fa fa-envelope"></i> Email Us</a></li>
+                        <li><a href="https://www.linkedin.com/in/as-abdul-samad/"  style="color:white; font-size: 15px;"><i class="fa fa-linkedin-square"></i> Linkedin</a></li> 
+                        <li><a href="https://api.whatsapp.com/send?phone=+923131082280&text=Hello there! I am here to talk about the Project"  style="color:white; font-size: 15px;"><i class="fa fa-phone-square"></i> Whatsapp</a></li>
                     </ul>
                 </div>
             </div>
